# pooch-rattler

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: publish-pypi.yml  update-license-year.yml
src/pooch_rattler/: __init__.py  _pooch.py
tests/: conftest.py  test_auth.py  test_basic.py  test_code_quality.py  test_discovery.py
